--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-router-dom": "^7.8.2",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
+    "swiper": "^12.0.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
     "zod": "^4.1.0"
